--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Hello world! Welcome to my webpage!</h1>
-        <p>This is my personal webbpage</p>
+        <p>This is my personal webpage</p>
     </body>
 </html>
